Local and social sign up refactor
