# routes/apis/admin.php
@@ -1,0 +1,7 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+Route::prefix('organizations')->group(function () {
+  Route::patch('approval', \App\Actions\Admin\OrganizationApproval::class);
+});
